--- a/Views/Admin/AddNewArticle.cshtml
+++ b/Views/Admin/AddNewArticle.cshtml
@@ -7,6 +7,7 @@
 <input name ="Name" type="text" value="Name" />
 <input name="ShortDescription" type="text" value="ShortDescription" />
 <textarea name="Description" cols="40" rows="5">Description</textarea>
+<input type="file" name="HeroImage" />
 <input type="submit" value="Добавить"  />
 <br />
 <select name="CategoryId">
