--- a/Views/Admin/CategoryDetailsUpdate.cshtml
+++ b/Views/Admin/CategoryDetailsUpdate.cshtml
@@ -9,3 +9,4 @@
 <input type="text" name="Id" value="@Model.Id"/>
 <input type="submit" value="Обновить"/>
 </form>
+@Html.ActionLink("Delete Category","MyCategoryRemove", new{ id=Model.Id})
