Add middleware, Tags Filter, Image

--- a/Views/Admin/AddNewTag.cshtml
+++ b/Views/Admin/AddNewTag.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-     Layout = null;
+   
 }
 
 <form enctype="multipart/form-data" asp-action="AddNewTag" asp-controller="Admin"  method="post">
-<input name ="Name" type="text" value="Name" />
-<input type="submit" value="Добавить"  />
+<input class="form-control" name ="Name" type="text" value="Name" required/>
+<input  class="btn btn-success" type="submit" value="Добавить"  />
 </form>
