--- a/Views/Admin/AddNewArticle.cshtml
+++ b/Views/Admin/AddNewArticle.cshtml
@@ -1,16 +1,18 @@
 ﻿@{
-     Layout = null;
+
 }
 @model List<CategoryViewModel>
 
 <form enctype="multipart/form-data" asp-action="AddNewArticle" asp-controller="Admin"  method="post">
-<input name ="Name" type="text" value="Name" />
-<input name="ShortDescription" type="text" value="ShortDescription" />
-<textarea name="Description" cols="40" rows="5">Description</textarea>
-<input type="file" name="HeroImage" />
-<input type="submit" value="Добавить"  />
+<input class="form-control" name ="Name" type="text" value="Name" required/>
+<input class="form-control" name="ShortDescription" type="text" value="ShortDescription" />
+<textarea class="md-textarea form-control" name="Description" cols="40" rows="5" required>Description</textarea>
+<label>Загрузить изображение</label>
+<input class="form-control" type="file" name="HeroImage" />
+<input  class="btn btn-success" type="submit" value="Добавить"  />
 <br />
-<select name="CategoryId">
+<label>Категория</label>
+<select class="form-select" name="CategoryId">
     @foreach(var item in Model)
          {  <option value = "@item.Id" >
               @item.Name
