--- a/Views/Admin/AddNewCategory.cshtml
+++ b/Views/Admin/AddNewCategory.cshtml
@@ -1,13 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    Layout = null;
+﻿@{
+   
 }
-@model CategoryViewModel;
+@model CategoryViewModel
 
 <form enctype="multipart/form-data" asp-action="AddNewCategory" asp-controller="Admin"  method="post">
-<input name="Name" type="text" value="Name" />
-<textarea name="Description" cols="40" rows="5">Description</textarea>
-<input type="submit" value="Добавить"  />
+<input class="form-control" name="Name" type="text" value="Name" required />
+<textarea class="md-textarea form-control" name="Description" cols="40" rows="5">Description</textarea>
+<input class="btn btn-success" type="submit" value="Добавить"  />
 </form>
