--- a/Views/Admin/MyArticlesSortByDate.cshtml
+++ b/Views/Admin/MyArticlesSortByDate.cshtml
@@ -15,8 +15,10 @@
 {
     <a asp-action=@ViewBag.Action
        asp-route-CurrentPage="@(Model.Item1.CurrentPage - 1)"
+       asp-route-DateStart="@ViewBag.DateStart"
+       asp-route-DateEnd="@ViewBag.DateEnd"
        class="btn btn-outline-dark">
-            <i class="glyphicon glyphicon-chevron-left"></i>
+        <i class="glyphicon glyphicon-chevron-left"></i>
         Назад
     </a>
 }
@@ -24,9 +26,11 @@
 {
     <a asp-action=@ViewBag.Action
        asp-route-CurrentPage="@(Model.Item1.CurrentPage + 1)"
+        asp-route-DateStart="@ViewBag.DateStart"
+       asp-route-DateEnd="@ViewBag.DateEnd"
        class="btn btn-outline-dark">
         Вперед
-            <i class="glyphicon glyphicon-chevron-right"></i>
+        <i class="glyphicon glyphicon-chevron-right"></i>
     </a>
 }
 </ul>
@@ -35,7 +39,7 @@
     @foreach (var item in Model.Item2)
     {
        <li>
-         @Html.ActionLink(item.Name,"MyArticlesSortByCategory", new{ id=item.Id})
+         @Html.ActionLink(item.Name,"MyArticlesSortByCategory", new{ id=item.Id, config = Model.Item1 })
     </li>
     }   
 </ul>
@@ -45,20 +49,6 @@
 <input type="hidden" name="PageSize" value=@Model.Item1.PageSize/>
 <input type="hidden" name="CurrentPage" value=@Model.Item1.CurrentPage/>
 <input class="btn btn-success" type="submit" value="Фильтр по дате"/>
-</form>
-<form enctype="multipart/form-data" asp-action="MyArticlesSortByTags" asp-controller="Admin"  method="post">
- <input type="hidden" name="PageSize" value=@Model.Item1.PageSize/>
-<input type="hidden" name="CurrentPage" value=@Model.Item1.CurrentPage/>
-<label>Доступные Теги</label>
-    <ul>
-    @foreach (var item in ViewBag.Tags)
-    {
-       <li>
-     <label>@item.Name</label><input type ="checkbox" name="Tags" value="@item.Id"/>
-    </li>
-    }   
-</ul>
-<input class="btn btn-success" type="submit" value="Фильтр по тегам"/>
 </form>
 <input class="btn btn-warning" type="button" value="Сброс Фильтров" onclick="@("window.location.href='" + @Url.Action("MyArticles", "Admin") + "'");"/>
 <br />
