--- a/Views/Home/ArticleDetails.cshtml
+++ b/Views/Home/ArticleDetails.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    Layout = null;
+
 }
 @model ArticleViewModel
 
-<input name ="Name" type="text" value=@Model.Name />
-<input name="ShortDescription" type="text" value=@Model.ShortDescription />
-<textarea name="Description" cols="40" rows="5">@Model.Description</textarea>
+<input class="form-control" name ="Name" type="text" value=@Model.Name readonly />
+<input class="form-control" name="ShortDescription" type="text" value=@Model.ShortDescription readonly />
+<textarea class="md-textarea form-control" name="Description" cols="40" rows="5" readonly>@Model.Description</textarea>
+<img class="img-fluid" src="@Model.HeroImagePath" height=375 width=375/>
